--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robo-friends",
-  "homepage": "https://artattac.github.io/robofriends",
+  "homepage": "https://artattac.github.io/Robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
